pb: add GetVersion api
