# openpitrix/pkg/pb/iam.swagger.json
@@ -598,6 +598,31 @@
           "IAMManager"
         ]
       }
+    },
+    "/static/version": {
+      "get": {
+        "operationId": "GetVersion",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/iamString"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "value",
+            "in": "query",
+            "required": false,
+            "type": "boolean",
+            "format": "boolean"
+          }
+        ],
+        "tags": [
+          "IAMManager"
+        ]
+      }
     }
   },
   "definitions": {
